			SWI-Prolog ChangeLog
			====================

  * FIXED: Properly deal with the vararg foreign calling convention
    for cleanup (CUTTED).  Spotted by Sergey Tikhonov.

  * FIXED: Check whether stack sizes are not allocated above physical
    limits (128 MB on 32-bit machines)

  * BUILD: Fixed missing references to `runtex' from various Makefiles
    in the packages (Paulo Moura).

  * FIXED: File/Consult menu of plwin.exe to load the file into the
    user module rather then the win_menu module providing the menu
    interface.

  * FIXED: Use GetWindowsDirectory() rather then the current drive as
    last resort for expanding ~.

  * PORT: Add -fno-strict-aliasing when using GCC.  SWI-Prolog doesn't
    satisfy the requirements for this optimization and some gcc versions
    seem to use it using -O2.


VERSION 5.0.2
=============

  * ADDED: library(time) to the clib package, providing alarm and timeout
    functions.  Works on Unix systems having setitimer() as well as on
    Windows using Multi Media timers.

  * ADDED: PL_handle_signal() to handle synchronous interrupts from foreign
    code.  Option PL_SIGSYNC to PL_signal() to schedule synchronous
    interrupts.

  * FIXED: Try to be a bit more intelligent on the expansion of ~ (home)
    in the Windows versions by checking the various alternatives to be
    existing and writeable directories.  Now prefers %USERPROFILE% over
    %HOMEDRIVE%\%HOMEPATH%.  With help from Lee Sanders.

  * FIXED: PL_recorded_external() handling ground terms.  Spotted by
    Volker Wysk.

  * FIXED: Multi-threaded version: make sure the thread itself thinks
    it exists right from the start (Lyosha Ilyukhin).

  * ENHANCED rl_add_history/1 does not add a line to the history if it is
    the same as the last line added (Anjo Anjewierden).

  * FIXED: Errornous messages on recursively receiving (error) signals.

  * FIXED: Various issues in the GUI tracer, making the trace more